--- a/grafana/grafana-ing.yaml
+++ b/grafana/grafana-ing.yaml
@@ -1,14 +1,17 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
    name: grafana
    namespace: kube-system
 spec:
-   rules:
-   - host: k8s.grafana
-     http:
-       paths:
-       - path: /
-         backend:
-          serviceName: grafana
-          servicePort: 3000
+  rules:
+  - host: grafana.test.com
+    http:
+      paths:
+      - backend:
+          service:
+            name: grafana
+            port:
+              number: 3000
+        path: /
+        pathType: Prefix
