--- a/prometheus/rbac-setup.yaml
+++ b/prometheus/rbac-setup.yaml
@@ -6,14 +6,25 @@ rules:
 - apiGroups: [""]
   resources:
   - nodes
+  - nodes/metrics
   - nodes/proxy
   - services
   - endpoints
   - pods
   verbs: ["get", "list", "watch"]
+- apiGroups: [""]
+  resources:
+  - configmaps
+  verbs: ["get"]
 - apiGroups:
   - extensions
+  - "networking.k8s.io"
   resources:
+  - nodes
+  - nodes/proxy
+  - services
+  - endpoints
+  - pods
   - ingresses
   verbs: ["get", "list", "watch"]
 - nonResourceURLs: ["/metrics"]
